# rust-h264-realtime-encoding

./: Cargo.toml  README.md
src/: camera.rs  encoder.rs  logging.rs  main.rs  video_frame.rs
